# quirk

./: .gitignore  LICENSE  README.md  pyproject.toml
quirk/: __init__.py
quirk/circuit/: __init__.py  gate.py  instruction.py  quantumcircuit.py  register.py
quirk/simulation/: __init__.py  simulator.py  statevector.py
quirk/utils/: __init__.py  helpers.py
