[project]
name = "quirk"
version = "0.1.0"
description = "An open-source software development kit for building, simulating, and executing quantum circuits."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "rustworkx>=0.17.1",
]
